log
Thu 11 May 2023 04:39:13 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
3e582fe
Thu 11 May 2023 04:41:32 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:3: error: unknown type name ‘heap’; did you mean ‘Heap’?
   39 |   heap *new;
      |   ^~~~
      |   Heap
heap.c:41:6: error: request for member ‘heapArray’ in something not a structure or union
   41 |   new->heapArray = malloc(3 * sizeof(Heap));
      |      ^~
heap.c:42:6: error: request for member ‘size’ in something not a structure or union
   42 |   new->size = 0;
      |      ^~
heap.c:43:6: error: request for member ‘capac’ in something not a structure or union
   43 |   new->capac = 3;
      |      ^~
heap.c:45:10: error: returning ‘int *’ from a function with incompatible return type ‘Heap *’ {aka ‘struct Heap *’} [-Werror=incompatible-pointer-types]
   45 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
6d1ed13
Thu 11 May 2023 04:41:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74a964b
